modified:   practices/aria-practices.html Minor edit to example text in keyboard row of table in button pattern.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -519,8 +519,8 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
                 <li>If the button is activated with a shortcut key, the focus should
                   usually remain in the context from which the shortcut key was activated.
                   For example, if <kbd>Alt</kbd>+<kbd>U</kbd> were assigned to an
-                  &quot;Up&quot; button that moves the current focused item in a list up
-                  one place in the list, pressing <kbd>Alt</kbd>+<kbd>U</kbd> when the
+                  &quot;Up&quot; button that moves the currently focused item in a list
+                  one position higher in the list, pressing <kbd>Alt</kbd>+<kbd>U</kbd> when the
                   focus is in the list should not move the focus from the list.
                 </li>
               </ul></td>
