modified:   practices/aria-practices.html Appended " (tabindex)" to heading for section 4.1.2 Keyboard Navigation between Widgets

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2723,7 +2723,7 @@ function detectHiContrast() {
       <p>For example, if a screen reader user hears a tree announced, they know that pressing the right arrow key will expand  a node. Similarly, when they hear a grid announced, they know they can use their screen reader's table reading commands. </p>
     </section>
       <section id="kbd_general_between">
-      <h4> Keyboard Navigation between Widgets</h4>
+      <h4> Keyboard Navigation between Widgets (tabindex)</h4>
       <p> The <code>tabindex</code> attribute enables focus to be moved via keyboard to HTML elements. For standard <a href="http://www.w3.org/TR/html401/">HTML 4.01</a>, tabindex was limited to form and anchor elements. For WAI-ARIA, the <code>tabindex</code> attribute is now applicable to all renderable HTML elements with additional functionality designed to help the author produce keyboard accessible  Web 2.0 widgets. </p>
       <ul>
         <li><kbd>Tab</kbd> and <kbd>Shift+Tab</kbd> key move focus among widgets and standard HTML controls. </li>
