modified:   practices/aria-practices.html Minor update to note in link pattern.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1191,7 +1191,7 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
             <td class="widget-description-head">Description: </td>
             <td class="widget-description">
             <p>A <a href="#link" class="role-reference">link</a> widget provides an interactive reference to a resource either locally in the application or to an external resource.</p> 
-            <p class="note">Authors are strongly encouraged to use a native host language link element, such as an HTML <code>&lt;A&gt;</code> tag. As with other WAI-ARIA widget roles, applying the link role to an element will not cause browsers to enhance the element with standard link behaviors such as navigation to the link target or context menu actions. </p>
+            <p class="note">Authors are strongly encouraged to use a native host language link element, such as an HTML <code>&lt;A&gt;</code> tag. As with other WAI-ARIA widget roles, applying the link role to an element will not cause browsers to enhance the element with standard link behaviors such as navigation to the link target or context menu actions. Providing these features of the element is the author's responsibility.</p>
             </td>
           </tr>
           <tr>
